Install icon packet, add home icon

--- a/src/Thankyou.css
+++ b/src/Thankyou.css
@@ -14,13 +14,13 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-weight: 10;
-  font-size: 50px;
+  font-size: 3rem;
   color: white;
 }
 .Thankyou > h2 {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-weight: 10;
-  font-size: 30px;
+  font-size: 1.5rem;
   color: white;
 }
