--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
   background: url(./Images/wallpaper.jpg);
-  /* margin: 20px; */
   background-position: center;
-  background-size: cover;
+  height: 100%;
+  overflow: hidden;
 }
 .text-truncate-container {
   display: -webkit-box;
